--- a/example/main/components/Chart/chart.css
+++ b/example/main/components/Chart/chart.css
@@ -2,6 +2,22 @@
 
 body {
 
+    .loader {
+        position: relative;
+        margin: 0 auto;
+        background-size: 100px 100px;
+        background-repeat: no-repeat;
+        background-image: url(https://loading.io/spinners/coolors/lg.palette-rotating-ring-loader.gif);
+        background-position: center center;
+        z-index: 9999999;
+        width: 100px;
+        min-height: 230px;
+    }
+
+    .chart-block {
+        margin-bottom: 50px;
+    }
+
     .heart {
         width: 25px;
         vertical-align: sub;
