--- a/example/main/components/Controls/controls.css
+++ b/example/main/components/Controls/controls.css
@@ -14,6 +14,7 @@
         box-shadow: none;
         text-transform: uppercase;
         font-size: 14px;
+        font-weight: bold;
         color: #447bff;
         padding: 8px 16px;
         cursor: pointer;
