--- a/example/js/components/Chart/chart.css
+++ b/example/js/components/Chart/chart.css
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
-
-body {
-    overflow-x: hidden;
-}
-
 .loader {
     position: relative;
     margin: 0 auto;
@@ -16,125 +10,15 @@ body {
     min-height: 230px;
 }
 
+.main-header {
+    composes: poppins-font from "../../shared.css";
+}
+
 .chart-block {
     margin-bottom: 50px;
 }
 
-.heart {
-    width: 25px;
-    vertical-align: sub;
-}
-
-h2 {
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    color: #447bff;
-}
-
 .total-info {
-    font-family: 'Poppins', sans-serif;
+    composes: poppins-font from "../../shared.css";
     margin: 10px 35px 30px;
-    text-align: center;
-}
-
-.root-container {
-    margin: 0 auto;
-    width: 1200px;
-    max-width: 1200px;
-
-    .container {
-        width: 1000px;
-        margin: 0 auto;
-    }
-
-    header {
-        padding: 20px 0 0 0;   
-    
-        .project-title {
-            margin: 0 auto;
-            width: 650px;
-            text-align: center;
-    
-            h2 {
-                font-family: 'Poppins', sans-serif;
-                color: #447bff;
-                font-size: 36px;
-                margin: 0;
-            }
-    
-            h4 {
-                font-family: 'Poppins', sans-serif;
-                font-size: 16px;
-                color: #3092e6;
-                margin: 0;
-            }
-        }
-    }
-
-    footer {
-        position: relative;
-    
-        div {
-            text-align: center;
-            font-family: 'Poppins', sans-serif;
-            color: #447bff;
-            font-size: 18px;
-            margin: 20px 0;
-    
-            a {
-                cursor: pointer;
-                color: #447bff;
-            }
-        }
-    }
-}
-
-:global(#forkongithub) {
-    position: fixed;
-    display: block;
-    top: 0;
-    right: 0;
-    width: 200px;
-    overflow: hidden;
-    height: 200px;
-    z-index: 9999;
-
-    a {
-        background: #cc5739;
-        color: #fff;
-        text-decoration: none;
-        font-family: arial, sans-serif;
-        text-align: center;
-        font-weight: bold;
-        padding: 5px 40px;
-        font-size: 1rem;
-        line-height: 2rem;
-        position: absolute;
-        transition: 0.5s;
-        width: 200px;
-        top: 60px;
-        right: -60px;
-        transform: rotate(45deg);
-
-        &:hover {
-            background: #7d0505;
-        }
-
-        &::before,
-        &::after {
-            content: "";
-            width: 100%;
-            display: block;
-            position: absolute;
-            top: 1px;
-            left: 0;
-            height: 1px;
-            background: #fff;
-        }
-
-        &::after {
-            bottom: 1px;
-            top: auto;
-        }
-    }
 }
