--- a/example/js/components/Controls/controls.css
+++ b/example/js/components/Controls/controls.css
@@ -21,3 +21,18 @@
         outline: none;
     }
 }
+
+.control {
+    composes: poppins-font from "../../shared.css";
+    margin: 5px 5px;
+    border: 2px solid #447bff;
+    background: transparent;
+    box-shadow: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: bold;
+    color: #447bff;
+    padding: 8px 16px;
+    cursor: pointer;
+    outline: none;
+}
