--- a/example/js/components/Header/header.css
+++ b/example/js/components/Header/header.css
@@ -4,23 +4,22 @@
     display: flex;
     justify-content: center;
     padding: 0;
-    margin: 25px 0 0 0;
+}
 
-    li {
-        width: 100px;
-        margin: 5px 5px;
+.menu-link {
+    composes: poppins-font from "../../shared.css";
+    background: transparent;
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+    outline: none;
+    padding: 20px 10px;
+
+    a {
         border: 2px solid #447bff;
-        background: transparent;
-        text-transform: uppercase;
-        font-size: 14px;
-        padding: 8px 16px;
-        cursor: pointer;
-        outline: none;
-
-        a {
-            color: #447bff;
-            font-weight: bold;
-            text-decoration: none;
-        }
+        padding: 8px 28px;
+        color: #447bff;
+        font-weight: bold;
+        text-decoration: none;
     }
 }
