--- a/example/js/shared.css
+++ b/example/js/shared.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
-.poppins-font {
+:global .poppins-font {
     text-align: center;
     font-family: 'Poppins', sans-serif;
     color: #447bff;
