--- a/src/chartify.css
+++ b/src/chartify.css
@@ -54,17 +54,21 @@ $main-color: rgba(172, 148, 179, 0.49);
     }
 
     .marks {
+      display: flex;
+      flex-direction: row;
       height: 200px;
       border-bottom: 1px solid $main-color;
 
       .ruler-row {
-        display: inline-block;
+        display: flex;
+        flex-direction: column-reverse;
 
         .mark {
           position: relative;
           border-top: 1px solid rgba(249,250,249, 0.9);
           border-left: 1px solid rgba(249,250,249, 0.9);
           box-sizing: border-box;
+          flex: 0 0 auto;
 
           &:hover {
             cursor: pointer;
