--- a/src/chartify.css
+++ b/src/chartify.css
@@ -10,6 +10,7 @@ $main-color: rgba(172, 148, 179, 0.49);
   position: relative;
   display: block;
   user-select: none;
+  margin: 0 auto;
 
   .y-axis-wrapper {
     display: inline-block;
@@ -34,7 +35,7 @@ $main-color: rgba(172, 148, 179, 0.49);
   .marks-wrapper {
     overflow: hidden;
     display: inline-block;
-    width: 950px;
+    width: auto;
     max-width: 90vw;
     height: 230px;
 
